--- a/jp/stuff/traditions.html
+++ b/jp/stuff/traditions.html
@@ -101,7 +101,7 @@
                                             target="_blank">ウィキペディア</a>
                                     </div>
                                 </div>
-                                <button onclick="myFunction()" class="button__default">Read more</button>
+                                <button class="button__default">さらに読む</button>
                             </div>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
                                             FM</a>
                                     </div>
                                 </div>
-                                <button onclick="myFunction()" class="button__default">さらに読む</button>
+                                <button class="button__default">さらに読む</button>
                             </div>
                         </div>
                     </div>
