--- a/lessons.html
+++ b/lessons.html
@@ -1249,7 +1249,7 @@
           </div>
         </div>
         <div class="container">
-          <button class="acc lesson lesson--nominative">Numerals</button>
+          <button class="acc lesson lesson--numerals">Numerals</button>
           <div class="panel">
             <h2>Numerals</h2>
             <p>In this lesson you will see how we usually count in Polish.<br>
