--- a/vi/about.html
+++ b/vi/about.html
@@ -20,7 +20,7 @@
     <script defer src="https://saro.website/assets/js/cookie.js"></script>
     <script defer data-ad-client="ca-pub-5704095251892500"
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <link rel="stylesheet" href="../assets/style/css/style.css">
+    <link rel="stylesheet" href="./../assets/style/css/style.css">
     <title>Chào mừng bạn đến với SARO - Về SARO</title>
 </head>
 
@@ -51,9 +51,9 @@
             <li><a class="nav-links" href="./about.html">Về SARO</a></li>
             <li><a class="nav-links" href="./contact.html">Liên hệ</a></li>
             <li><a class="nav-links" href="./join/">Tham gia SARO ❤</a></li>
-            <li><a class="nav-links" href="./support_us.html">chúng tôi❤</a></li>
+            <li><a class="nav-links" href="./support_us.html">Chúng tôi❤</a></li>
         </ul>
-        <script src="../assets/js/menu.js"></script>
+        <script src="./../assets/js/menu.js"></script>
     </header>
     <main>
         <section class="about">
@@ -66,16 +66,16 @@
                             <p>Xin chào, <br>
                                 Chúng tôi là SARO.</p>
                             <p>Chúng tôi là SARO. Với khát khao và mong muốn giúp đỡ người nước ngoài học tiếng Ba Lan
-                                cách dễ dàng hơn, chúng tôi quyết định cộn lập dự án SARO.
-                                Ngôn ngữ chính của chúng tôi là tiếng anh. Tuy nhiên, chúng thôi cũng thêm số ngôn ngữ
+                                cách dễ dàng hơn, chúng tôi quyết định thành lập dự án SARO.
+                                Ngôn ngữ chính của chúng tôi là Tiếng Việt. Tuy nhiên, chúng thôi cũng thêm số ngôn ngữ
                                 khác như tiếng Nhật và tiếng Hàn, tiếng Việt.
                                 Tên gọi SARO được bắt nguồn từ cái tên "Saki" trong tiếng Nhật 沙季 và "Robert" trong
                                 tiếng Ba Lan. Saki và Robert là cặp đôi Nhật - Ba Lan với mong muốn được chia sẻ kiến
                                 thức của mình đến với mọi người xung quanh...
                             </p>
                         </div>
-                        <div id="root" lang="en"></div>
-                        <script type="module" src="../assets/js/about.js"></script>
+                        <div id="root" lang="vi"></div>
+                        <script type="module" src="./../assets/js/about.js"></script>
                         <div class="footer-about">
                             <p>Nếu bạn muốn ủng hộ chúng tôi, hãy ghé qua trang web này <a href="support_us.html">ỦNG HỘ
                                     CHÚNG TÔI</a>
@@ -89,7 +89,7 @@
                 </article>
             </div>
             <div id="reportWindow"></div>
-            <script src="../assets/js/report.js"></script>
+            <script src="./../assets/js/report.js"></script>
         </section>
     </main>
     <div class="wrapper">
@@ -107,7 +107,7 @@
                 <label for="language" class="language">Ngôn ngữ:</label><br>
                 <div class="custom-select">
                     <select id="language" onchange="window.location=this.options[this.selectedIndex].value">
-                        <option value="" disabled selected>Tiếng Anh</option>
+                        <option value="" disabled selected>Tiếng Việt</option>
                         <option value="https://saro.website/about.html">English</option>
                         <option value="https://saro.website/jp/about.html">日本語</option>
                         <option value="https://saro.website/kr/about.html">한국어</option>
@@ -118,11 +118,11 @@
             </div>
             <div class="footer-sm">
                 <a href="https://www.youtube.com/channel/UCfmBNdamq_Z70lFx-m4wpWA" target="_blank"><img
-                        src="../assets/img/icons/YouTube1.png" alt="YouTube icon"></a>
+                        src="./../assets/img/icons/YouTube1.png" alt="YouTube icon"></a>
                 <a href="https://www.instagram.com/sarowebsite/" target="_blank"><img
-                        src="../assets/img/icons/Instagram.png" alt="Instagram icon"></a>
+                        src="./../assets/img/icons/Instagram.png" alt="Instagram icon"></a>
                 <a href="https://www.facebook.com/SARO-Free-Polish-lesson-106067287815397" target="_blank"><img
-                        src="../assets/img/icons/Facebook.png" alt="Facebook icon"></a>
+                        src="./../assets/img/icons/Facebook.png" alt="Facebook icon"></a>
             </div>
         </footer>
     </div>
