--- a/vi/stuff/curiosities.html
+++ b/vi/stuff/curiosities.html
@@ -20,7 +20,7 @@
     <script defer src="https://saro.website/assets/js/cookie.js"></script>
     <script data-ad-client="ca-pub-5704095251892500" defer
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <link rel="stylesheet" href="../../assets/style/css/style.css">
+    <link rel="stylesheet" href="./../../assets/style/css/style.css">
     <title>Chào mừng bạn đến với SARO - Cùng khám phá.</title>
 </head>
 
@@ -35,7 +35,7 @@
             </button>
             <ul class="nav__desktop">
                 <li><a class="nav" href="./../index.html">Trang chủ</a></li>
-                <li><a class="nav" href="./../lessons.html">/Bài học</a></li>
+                <li><a class="nav" href="./../lessons.html">Bài học</a></li>
                 <li><a class="nav" href="./index.html">Các mục khác</a></li>
                 <li><a class="nav" href="./../about.html">Về SARO</a></li>
                 <li><a class="navs" href="./../contact.html">Liên hệ</a></li>
@@ -46,14 +46,14 @@
         <ul class="nav-list">
             <li><a href="./../index.html" class="header-brand--after">SARO</a></li>
             <li><a class="nav-links" href="./../index.html">Trang chủ</a></li>
-            <li><a class="nav-links" href="./../lessons.html">/Bài học</a></li>
+            <li><a class="nav-links" href="./../lessons.html">Bài học</a></li>
             <li><a class="nav-links" href="./index.html">Các mục khác</a></li>
             <li><a class="nav-links" href="./../about.html">Về SARO</a></li>
             <li><a class="nav-links" href="./../contact.html">Liên hệ</a></li>
             <li><a class="nav-links" href="./../join/">Tham gia SARO❤</a></li>
             <li><a class="nav-links" href="./../support_us.html">Ủng hộ chúng tôi❤</a></li>
         </ul>
-        <script src="../../assets/js/menu.js"></script>
+        <script src="./../../assets/js/menu.js"></script>
     </header>
     <main>
         <button class="back" onclick="goBack()">Quay lại</button>
@@ -65,7 +65,7 @@
                     <div class="content">
                         <h2>Pizza với nước sốt cà ketchup?</h2>
                         <p class="data"> 08.01.2020</p>
-                        <img src="../../assets/img/articles/curiosities/01.08.2020/pizzaZKetchupem.jpg" alt="Pizza"
+                        <img src="./../../assets/img/articles/curiosities/01.08.2020/pizzaZKetchupem.jpg" alt="Pizza"
                             class="myImg image-left__center">
                         <p> Bánh pizza phổ biến là loại có lớp vỏ rất mỏng và đi kèm với một chút dầu ô liu. Bạn cũng có
                             thể cũng đã ăn loại bánh pizza như vậy ở các nhà hàng Ba Lan.<br>
@@ -75,7 +75,7 @@
                             Lớp vỏ mỏng? Chà… Không phải ở Ba Lan! Ở nhiều gia đình Ba Lan, bánh pizza được làm bằng bột
                             dày, giống như bánh Foccacia dày, bông và thơm. Tạo một lớp bột như vậy mất khá nhiều thời
                             gian, nhưng nó rất đáng giá.</p>
-                        <img src="../../assets/img/articles/curiosities/01.08.2020/pizzaMrozonja.jpg"
+                        <img src="./../../assets/img/articles/curiosities/01.08.2020/pizzaMrozonja.jpg"
                             alt="Pizza with ketchup" class="myImg image-right__center">
                         <b>Công thức chuẩn nhất là:</b>
                         <p>* Cho 1 khối men tươi vào 100ml nước ấm và chút đường để men nở đều, <br>
@@ -84,7 +84,7 @@
                             Để bột bông hơn, hãy để bột nở trong vài giờ. <br>
                             <span class="dots">...</span></p>
                         <div class="more">
-                            <img src="../../assets/img/articles/curiosities/01.08.2020/finalPizza.jpg"
+                            <img src="./../../assets/img/articles/curiosities/01.08.2020/finalPizza.jpg"
                                 alt="Pizza with Ketchup" class='myImg image-left__center'>
                             <p>Trên khay nướng, khi xếp bột, bạn có thể quết một lớp sốt cà chua và các nguyên liệu bạn
                                 yêu thích lên phía trên. Do lớp bột rất dày nên bạn có thể cho thật nhiều nguyên liệu
@@ -95,7 +95,7 @@
                                 với nước sốt tỏi và tương cà rất phổ biến.
                             </p>
                             <b>Zapiekanka</b>
-                            <img src="../../assets/img/articles/curiosities/01.08.2020/zapiekanka.jpg"
+                            <img src="./../../assets/img/articles/curiosities/01.08.2020/zapiekanka.jpg"
                                 alt="Zapiekanka z grzybami" class="myImg image-right__center">
                             <p>Chúng tôi cũng có Pizza kiểu Ba Lan!
                                 Nó thực sự ngon và thường bạn ăn nó với tương cà và mù tạt. Tôi nghĩ một trong những lý
@@ -136,9 +136,9 @@
             </div>
             </article>
             </div>
-            <script src="../assets/js/gallery.js"></script>
-            <script src="../assets/js/readMore.js"></script>
-            <script src="../../assets/js/report.js"></script>
+            <script src="./../../assets/js/gallery.js"></script>
+            <script src="./../../assets/js/readMore.js"></script>
+            <script src="./../../assets/js/report.js"></script>
             <div id="reportWindow"></div>
         </section>
     </main>
@@ -146,7 +146,7 @@
         <footer>
             <ul>
                 <li><a href="../index.html">Trang chủ</a></li>
-                <li><a href="../lessons.html">/Bài học</a></li>
+                <li><a href="../lessons.html">Bài học</a></li>
                 <li><a href="./index.html">Các mục khác</a></li>
                 <li><a href="../about.html">Về SARO</a></li>
                 <li><a href="../contact.html">Liên hệ</a></li>
@@ -157,22 +157,22 @@
                 <label for="language" class="language">Ngôn ngữ:</label><br>
                 <div class="custom-select">
                     <select id="language" onchange="window.location=this.options[this.selectedIndex].value">
-                        <option value="" disabled selected>Tiếng Anh</option>
-                        <option value="https://saro.website/about.html">English</option>
+                        <option value="" disabled selected>Tiếng Việt</option>
                         <option value="https://saro.website/jp/stuff/curiosities.html">日本語</option>
                         <option value="https://saro.website/kr/stuff/curiosities.html">한국어</option>
                         <option value="https://saro.website/ch/stuff/curiosities.html">中文</option>
+                        <option value="https://saro.website/vi/stuff/curiosities.html">Tiếng Việt</option>
                     </select>
                     <span class="custom-arrow"></span>
                 </div>
             </div>
             <div class="footer-sm">
                 <a href="https://www.youtube.com/channel/UCfmBNdamq_Z70lFx-m4wpWA" target="_blank"><img
-                        src="../../assets/img/icons/YouTube1.png" alt="YouTube icon"></a>
+                        src="./../../assets/img/icons/YouTube1.png" alt="YouTube icon"></a>
                 <a href="https://www.instagram.com/sarowebsite/" target="_blank"><img
-                        src="../../assets/img/icons/Instagram.png" alt="Instagram icon"></a>
+                        src="./../../assets/img/icons/Instagram.png" alt="Instagram icon"></a>
                 <a href="https://www.facebook.com/SARO-Free-Polish-/lesson-106067287815397" target="_blank"><img
-                        src="../../assets/img/icons/Facebook.png" alt="Facebook icon"></a>
+                        src="./../../assets/img/icons/Facebook.png" alt="Facebook icon"></a>
             </div>
         </footer>
     </div>
