--- a/vi/support_us.html
+++ b/vi/support_us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
 <head>
     <meta charset="UTF-8">
@@ -17,11 +17,11 @@
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="1024">
-  <script defer src="https://saro.website/assets/js/cookie.js"></script>
+    <script defer src="https://saro.website/assets/js/cookie.js"></script>
     <script defer data-ad-client="ca-pub-5704095251892500" preload
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <link rel="stylesheet" href="./assets/style/css/style.css">
-    <title>Welcome to SARO - Support us❤</title>
+    <link rel="stylesheet" href="./../assets/style/css/style.css">
+    <title>Chào mừng bạn đến với SARO - Hãy cùng ủng hộ chúng tôi❤</title>
 </head>
 
 <body>
@@ -34,88 +34,90 @@
                 <div class="bar"></div>
             </button>
             <ul class="nav__desktop">
-                <li><a class="nav" href="./index.html">Home</a></li>
-                <li><a class="nav" href="./lessons.html">Lessons</a></li>
-                <li><a class="nav" href="./stuff/index.html">Stuff</a></li>
-                <li><a class="nav" href="./about.html">About</a></li>
-                <li><a class="nav" href="./contact.html">Contact</a></li>
-                <li><a class="nav" href="./join/">Join us❤</a></li>
+                <li><a class="nav" href="./index.html">Trang chủ</a></li>
+                <li><a class="nav" href="./lessons.html">Bài học</a></li>
+                <li><a class="nav" href="./stuff/index.html">Các mục khác</a></li>
+                <li><a class="nav" href="./about.html">Về chúng tôi</a></li>
+                <li><a class="nav" href="./contact.html">Liên hệ </a></li>
+                <li><a class="nav" href="./join/">Tham gia SARO❤</a></li>
             </ul>
-            <a href="support_us.html" class="header-cases">Support us</a>
-        </nav>
-        <ul class="nav-list">
-            <li><a href="index.html" class="header-brand--after">SARO</a></li>
-            <li><a class="nav-links" href="./index.html">Home</a></li>
-            <li><a class="nav-links" href="./lessons.html">Lessons</a></li>
-            <li><a class="nav-links" href="./stuff/index.html">Stuff</a></li>
-            <li><a class="nav-links" href="./about.html">About</a></li>
-            <li><a class="nav-links" href="./contact.html">Contact</a></li>
-            <li><a class="nav-links" href="./join/">Join us❤</a></li>
-            <li><a class="nav-links" href="./support_us.html">Support us❤</a></li>
-        </ul>
-        <script src="./assets/js/menu.js"></script>
+            <a href="support_us.html" class="header-cases">Ủng hộ chúng tôi
+                <ul class="nav-list">
+                    <li><a href="index.html" class="header-brand--after">SARO</a></li>
+                    <li><a class="nav-links" href="./index.html">Trang chủ</a></li>
+                    <li><a class="nav-links" href="./lessons.html">Bài học</a></li>
+                    <li><a class="nav-links" href="./stuff/index.html">Các mục khác</a></li>
+                    <li><a class="nav-links" href="./about.html">Về SARO</a></li>
+                    <li><a class="nav-links" href="./contact.html">Liên hệ </a></li>
+                    <li><a class="nav-links" href="./join/">Tham gia SARO❤</a></li>
+                    <li><a class="nav-links" href="./support_us.html">Ủng hộ chúng tôi❤</a></li>
+                </ul>
+                <script src="./../assets/js/menu.js"></script>
     </header>
     <main>
         <section class="support_us">
             <div class="wrapper">
-                <h1>Support us💕</h1>
+                <h1>Ủng hộ chúng tôi💕</h1>
                 <div class="container">
-                    <img src="./assets/img/bg/logo_type.png" alt="logo" class="image-center__center">
-                    <p>Hello, we are SARO. The project was created as a result of a desire to help people studying
-                        the Polish language.
-                        The main language is English but we also add languages like Japanese and Korean as well.
-                        SARO has created from the word taken from the name
-                        “Saki” in Japanese 沙季 and from name Robert. Saki and Robert are Polish and Japanese couple
-                        trying to share with others their knowledge.
+                    <img src="./../assets/img/bg/logo_type.png" alt="logo" class="image-center__center">
+                    <p>Xin chào, Chúng tôi là SARO. Với khát khao và mong muốn giúp đỡ người nước ngoài học tiếng Ba Lan
+                        cách dễ dàng hơn, chúng tôi quyết định cộn lập dự án SARO.
+                        Ngôn ngữ chính của chúng tôi là tiếng anh. Tuy nhiên, chúng thôi cũng thêm số ngôn ngữ khác như
+                        tiếng Nhật và tiếng Hàn, tiếng Việt.
+                        Tên gọi SARO được bắt nguồn từ cái tên "Saki" trong tiếng Nhật 沙季 và "Robert" trong tiếng Ba
+                        Lan. Saki và Robert là cặp đôi Nhật - Ba Lan với mong muốn được chia sẻ kiến thức của mình đến
+                        với mọi người xung quanh.
+
                         <br>
                         <br>
-                        You can support us you with a donation and giving us feedback.
-                        Donations will be helpful to keep our host and domain because of the cost is pretty high..
-                        But every donations are voluntary and our website is totally free of charged!
-                        All donations will be spent for the server and domain.
+                        Bạn có thể ủng hộ, quyên góp cho chúng tôi và giới thiệu chúng tôi đến với mọi người khác nhé.
+                        Các khoản đóng góp sẽ giúp ích cho SARO để duy trì trang web của chúng tôi vì chi phí khá cao.
+                        Nhưng mọi khoản đóng góp để là tự nguyện và trang web của chúng tôi hoàn toàn miễn phí.
+                        Tất cả các khoản đóng góp sẽ được chi cho việc duy trì trang web.
+                    <div class=""></div>
                     </p>
-                    <p>How to donate us? You can go to the website of Patreon <a
-                            href="https://www.patreon.com/projectSaro" target="_blank">Click here</a></p>
+                    <p>Làm thế nào để quyên góp cho chúng tôi? Bạn có thể nhấn vào trang web Patreon <a
+                            href="https://www.patreon.com/projectSaro" target="_blank">Nhấn vào đây</a></p>
                     <div class="reportButton">
-                        <button class="report" onclick="report()">report</button>
+                        <button class="report" onclick="report()">Báo cáo</button>
                     </div>
                 </div>
             </div>
             <div id="reportWindow"></div>
-            <script src="./assets/js/report.js"></script>
+            <script src="./../assets/js/report.js"></script>
         </section>
     </main>
     <div class="wrapper">
         <footer>
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../lessons.html">Lessons</a></li>
-                <li><a href="./stuff/">Stuff</a></li>
-                <li><a href="../about.html">About</a></li>
-                <li><a href="../contact.html">Contact</a></li>
-                <li><a href="../support_us.html">Support us</a></li>
-                <li><a href="../join/">Join us❤</a></li>
+                <li><a href="../index.html">Trang chủ</a></li>
+                <li><a href="../lessons.html">Bài học</a></li>
+                <li><a href="./stuff/">Các mục khác</a></li>
+                <li><a href="../about.html">Về SARO</a></li>
+                <li><a href="../contact.html">Liên hệ </a></li>
+                <li><a href="../support_us.html">Ủng hộ chúng tôi</a></li>
+                <li><a href="../join/">Tham gia SARO❤</a></li>
             </ul>
             <div class="footer-links-cases">
-                <label for="language" class="language">Language:</label><br>
+                <label for="language" class="language">Ngôn ngữ:</label><br>
                 <div class="custom-select">
                     <select id="language" onchange="window.location=this.options[this.selectedIndex].value">
-                        <option value="" disabled selected>English</option>
+                        <option value="" disabled selected>Tiếng Anh</option>
+                        <option value="https://saro.website/support_us.html">English</option>
                         <option value="https://saro.website/jp/support_us.html">日本語</option>
                         <option value="https://saro.website/kr/support_us.html">한국어</option>
                         <option value="https://saro.website/ch/support_us.html">中文</option>
-                        <option value="https://saro.website/vi/support_us.html">Tiếng Việt</option>
                     </select>
                     <span class="custom-arrow"></span>
                 </div>
             </div>
             <div class="footer-sm">
                 <a href="https://www.youtube.com/channel/UCfmBNdamq_Z70lFx-m4wpWA" target="_blank"><img
-                        src="./assets/img/icons/YouTube1.png" alt="YouTube icon"></a>
+                        src="./../assets/img/icons/YouTube1.png" alt="YouTube icon"></a>
                 <a href="https://www.instagram.com/sarowebsite/" target="_blank"><img
-                        src="./assets/img/icons/Instagram.png" alt="Instagram icon"></a>
+                        src="./../assets/img/icons/Instagram.png" alt="Instagram icon"></a>
                 <a href="https://www.facebook.com/SARO-Free-Polish-Lessons-106067287815397" target="_blank"><img
-                        src="./assets/img/icons/Facebook.png" alt="Facebook icon"></a>
+                        src="./../assets/img/icons/Facebook.png" alt="Facebook icon"></a>
             </div>
         </footer>
     </div>
