--- a/index.html
+++ b/index.html
@@ -76,6 +76,26 @@
                     <div class="content content--news">
                         <div class="box-news__item">
                             <div class="box-news">
+                                <h2>Update december :)</h2>
+                                <p class="data"> 06.12.2020 | author: <a href="about.html" target="_blank"
+                                        class="author">@Robert</a></p>
+                                <img src="./assets/img/embl/nominative.jpg" alt="to be lesson"
+                                    class="image-left__center" />
+                                <p>
+                                    Hello guys! <br>
+                                    We've got new updates for you people 🙂 I hope you will enjoy 2
+                                    new lessons! </p>
+                                <a href="lessons.html">* Nominative</a> <br>
+                                <a href="lessons.html">* Numerals</a> <br>
+                                <p>
+                                    Those 2 lessons start with second unit for advanced beginners! 🙂 <br>
+
+                                    Best regards!
+                                </p>
+                            </div>
+                        </div>
+                        <div class="box-news__item">
+                            <div class="box-news">
                                 <h2>New lessons!</h2>
                                 <p class="data"> 21.11.2020 | author: <a href="about.html" target="_blank"
                                         class="author">@Robert</a></p>
