--- a/jp/index.html
+++ b/jp/index.html
@@ -82,6 +82,23 @@
                         <div class="box-news__item">
                             <div class="box-news">
                                 <h2>新レッスン</h2>
+                                <p class="data"> 2020年12月06日 | 作成者: <a href="about.html" target="_blank"
+                                        class="author">@ロバート</a></p>
+                                <img src="./../assets/img/embl/nominative.jpg" alt="to be lesson"
+                                    class="image-left__center" />
+                                <p>
+                                    Cześć ! <br>
+                                    この度、新しくレッスンを2つ追加しました😊<br>
+                                    <a href="./lessons.html">・主格</a> <br>
+                                    <a href="./lessons.html">・数詞</a> <br>
+                                <p>この2つのレッスンは、unit1 からスタートします。ポーランド語初心者の方にも優しい内容になっていますので、ぜひチェックしてみて下さい◎</p>
+                                </p>
+                                <p style="margin-top: 15px">これからもSAROをよろしくお願いします☺️！</p>
+                            </div>
+                        </div>
+                        <div class="box-news__item">
+                            <div class="box-news">
+                                <h2>新レッスン</h2>
                                 <p class="data"> 2020年11月21日 | 作成者: <a href="about.html" target="_blank"
                                         class="author">@ロバート</a></p>
                                 <img src="./../assets/img/embl/to-be.jpg" alt="to be lesson"
