--- a/vi/stuff/index.html
+++ b/vi/stuff/index.html
@@ -125,7 +125,7 @@
                 <label for="language" class="language">Ngôn ngữ:</label><br>
                 <div class="custom-select">
                     <select id="language" onchange="window.location=this.options[this.selectedIndex].value">
-                        <option value="" disabled selected>Tiếng Anh</option>
+                        <option value="" disabled selected>Tiếng Việt</option>
                         <option value="https://saro.website/about.html">English</option>
                         <option value="https://saro.website/jp/stuff/">日本語</option>
                         <option value="https://saro.website/kr/stuff/">한국어</option>
