--- a/vi/stuff/media.html
+++ b/vi/stuff/media.html
@@ -437,7 +437,7 @@
                 <label for="language" class="language">Ngôn ngữ:</label><br>
                 <div class="custom-select">
                     <select id="language" onchange="window.location=this.options[this.selectedIndex].value">
-                        <option value="" disabled selected>Tiếng Anh</option>
+                        <option value="" disabled selected>Tiếng Việt</option>
                         <option value="https://saro.website/about.html">English</option>
                         <option value="https://saro.website/jp/stuff/media.html">日本語</option>
                         <option value="https://saro.website/kr/stuff/media.html">한국어</option>
