updated all sections

--- a/ch/index.html
+++ b/ch/index.html
@@ -77,6 +77,23 @@
                     <div class="content content--news">
                         <div class="box-news__item">
                             <div class="box-news">
+                                <h2>12月更新</h2>
+                                <p class="data">2020年11月21日|编辑：<a href="about.html" target="_blank"
+                                        class="author">@Robert</a></p>
+                                <img src="../assets/img/embl/nominative.jpg" alt="to be lesson"
+                                    class="image-left__center" />
+                                <p>
+                                    大家好！我们已经做了更新，希望你们会喜欢这2个新的课程。 <br>
+                                    <a href="./lessons.html">主格</a> <br>
+                                    <a href="./lessons.html"> 数字</a>
+                                </p>
+                                <p>这两个课程从第二个单元开始，适合进阶阶段的学习者。
+                                    祝好</p>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="box-news__item">
+                            <div class="box-news">
                                 <h2>新的课程</h2>
                                 <p class="data">2020年11月21日|编辑：<a href="about.html" target="_blank"
                                         class="author">@Robert</a></p>
