--- a/vi/index.html
+++ b/vi/index.html
@@ -10,9 +10,9 @@
     </script>
     <meta charset="UTF-8">
     <meta name="description"
-        content="We are SARO. We offer free Polish lessons! This project was created as a result of a desire to help people, teaching the Polish language and share our culture and curiosities">
+        content="Chúng tôi là SARO. Chúng tôi cung cấp các bài học tiếng Ba Lan miễn phí! Dự án này được thành lập với mong muốn giúp đỡ người nước ngoài học tiếng Ba Lan và chia sẻ văn hóa Ba Lan và cùng khám phá những điều thú vị ở Ba Lan. ">
     <meta name="keywords"
-        content="Polish lessons, Polish lessons online, online, lessons online, Polish online, free Polish lessons, polish lessons, Polska, polskie lekcje, lekcje języka polskiego, przepisy, recipes, recipe, polish foods recipe, recipes of Polish foods, żurek, naleśniki, gołąbki, żurek recipe, naleśniki recipe, gołąbki recipe, Polish cabbage rolls recipe, Polish free lessons, how to learn Polish, where to learn Polish, przypadki, polish declensions, how to make Polish words, how to make Polish sentences, SARO, SARO Polish lessons for free, SARO Polish, saro Polish lessons, Polish, Poland, Polska, polski, język polski, Polish hangman, saro, course, online, courses, english, japanese, Polish, Polish lessons, Polish curiosities, Polish tradition, Saro Polish langauge lessons online, Polish grammar, Polish media, Polish movies, Polish music, Polish foods, Polish food, pierogi, naleśniki, the best website for studying Polish, Polish lessons, Polish dictionary, Saro, Sa, Ro, Saki, Robert, Polish pronunciation, how to speak Polish, Warszawa, Warsaw, Wrocław, Wroclaw, Gdańsk, Polish cases, przypadki, Polish ortography, Polish culture, Polish traditions">
+        content="Bài học tiếng Ba Lan, Bài học tiếng Ba Lan online, online, bài học online, Ba Lan online, bài học tiếng Ba Lan miễn phí, Ba Lan, Polska, polskie lekcje, lekcje języka polskiego, przepisy, các công thức, công thức, công thức món ăn Ba Lan, các công thức món ăn Ba Lan, żurek, naleśniki, gołąbki, công thức żurek, công thức naleśniki, công thức gołąbki,công thức bắp cải cuốn Ba Lan, các bài học miễn phí tiếng Ba Lan, làm sao để học tiếng Ba Lan, học tiếng Ba Lan ở đâu, przypadki, Biến cách Ba Lan, cách tạo ra từ trong tiếng Ba Lan, cách tạo câu tiếng Ba Lan, SARO, các bài học tiếng Ba Lan SARO miễn phí, SARO tiếng Ba Lan, saro bài học tiếng Ba Lan, tiếng Ba Lan, Ba Lan, Polska, polski, język polski, trò chơi đố chữ, saro, khóa học, khóa học online, tiếng Anh, tiếng Nhật, tiếng Ba Lan, các bài học tiếng Ba Lan, cùng khám phá Ba Lan, truyền thông Ba Lan, bài học tiếng Ba Lan Saro online, ngữ pháp Ba Lan, phim ảnh Ba Lan, điện ảnh Ba Lan, âm nhạc Ba Lan, các món ăn Ba Lan, đồ ăn Ba Lan, pierogi, naleśniki, các trang web tốt nhất để học tiếng Ba Lan, bài học, từ điển tiếng Ba Lan, Saro, Sa, Ro, Saki, Robert, phát âm tiếng Ba Lan, cách nói tiếng Ba Lan, Warszawa, Warsaw, Wrocław, Wroclaw, Gdańsk, các trường hợp tiếng Ba Lan, przypadki, chính tả tiếng Ba Lan, Văn hóa Ba Lan, truyền thống Ba Lan,Polish lessons, Polish lessons online, online, lessons online, Polish online, free Polish lessons, polish lessons, Polska, polskie lekcje, lekcje języka polskiego, przepisy, recipes, recipe, polish foods recipe, recipes of Polish foods, żurek, naleśniki, gołąbki, żurek recipe, naleśniki recipe, gołąbki recipe, Polish cabbage rolls recipe, Polish free lessons, how to learn Polish, where to learn Polish, przypadki, polish declensions, how to make Polish words, how to make Polish sentences, SARO, SARO Polish lessons for free, SARO Polish, saro Polish lessons, Polish, Poland, Polska, polski, język polski, Polish hangman, saro, course, online, courses, english, japanese, Polish, Polish lessons, Polish curiosities, Polish tradition, Saro Polish language lessons online, Polish grammar, Polish media, Polish movies, Polish music, Polish foods, Polish food, pierogi, naleśniki, the best website for studying Polish, Polish lessons, Polish dictionary, Saro, Sa, Ro, Saki, Robert, Polish pronunciation, how to speak Polish, Warszawa, Warsaw, Wrocław, Wroclaw, Gdańsk, Polish cases, przypadki, Polish ortography, Polish culture, Polish traditions">
     <meta name="Tác giả" content="Robert Michalski">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:site_name" content="Saro.Website with free Polish lessons" />
@@ -46,7 +46,7 @@
                 <li><a class="nav" href="./stuff/index.html">Các mục khác</a></li>
                 <li><a class="nav" href="./about.html">Về SARO</a></li>
                 <li><a class="nav" href="./contact.html">Liên hệ</a></li>
-                <li><a class="nav" href="./join/">Tham gia SARO❤</a></li>
+                <li><a class="nav" href="./../join/">Tham gia SARO❤</a></li>
             </ul>
             <a href="support_us.html" class="header-cases">Ủng hộ chúng tôi</a>
         </nav>
@@ -57,7 +57,7 @@
             <li><a class="nav-links" href="./stuff/index.html">Các mục khác</a></li>
             <li><a class="nav-links" href="./about.html">Về SARO</a></li>
             <li><a class="nav-links" href="./contact.html">Liên hệ</a></li>
-            <li><a class="nav-links" href="./join/">Tham gia SARO❤</a></li>
+            <li><a class="nav-links" href="./../join/">Tham gia SARO❤</a></li>
             <li><a class="nav-links" href="./support_us.html">Ủng hộ chúng tôi❤</a></li>
         </ul>
         <script src="./../assets/js/menu.js"></script>
@@ -74,6 +74,24 @@
                 <h1>Tin tức</h1>
                 <article>
                     <div class="content content--news">
+                        <div class="box-news__item">
+                            <div class="box-news">
+                                <h2>Các bài học mới!</h2>
+                                <p class="data"> 06.12.2020 | Tác giả: <a href="about.html" target="_blank"
+                                        class="Tác giả">@Robert</a></p>
+                                <img src="./../assets/img/embl/nominative.jpg" alt="to be lesson"
+                                    class="image-left__center" />
+                                <p> Cập nhật tháng 12</p>
+                                <p> xin chào các bạn! Chúng tôi có cập nhật mới cho mọi người. Tôi hy vọng bạn sẽ thích
+                                    2 bài học mới!</p>
+                                <ul>
+                                    <li><a href="./lessons.html">* Cách 1: Mianownik</a> </li>
+                                    <li><a href="./lessons.html">* Số đếm</a> </li>
+                                </ul>
+                                <p>2 bài học này dành cho người mới bắt đầu! 🙂Trân trọng!</p>
+                                </p>
+                            </div>
+                        </div>
                         <div class="box-news__item">
                             <div class="box-news">
                                 <h2>Các bài học mới!</h2>
@@ -199,7 +217,7 @@
                 <li><a href="../about.html">Về SARO</a></li>
                 <li><a href="../contact.html">Liên hệ</a></li>
                 <li><a href="../support_us.html">Ủng hộ chúng tôi</a></li>
-                <li><a href="../join/">Tham gia SARO❤</a></li>
+                <li><a href="../../join/">Tham gia SARO❤</a></li>
             </ul>
             <div class="footer-links-cases">
                 <label for="language" class="language">Ngôn ngữ:</label><br>
